generated-manifests/apps_v1_deployment_codeintel-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    description: Postgres database for various data.
  labels:
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
  name: codeintel-db
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: codeintel-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: codeintel-db
        deploy: sourcegraph
        group: backend
    spec:
      containers:
      - image: index.docker.io/sourcegraph/codeintel-db:insiders@sha256:a55fea6638d478c2368c227d06a1a2b7a2056b693967628427d41c92d9209e97
        livenessProbe:
          exec:
            command:
            - /liveness.sh
          initialDelaySeconds: 15
        name: pgsql
        ports:
        - containerPort: 5432
          name: pgsql
        readinessProbe:
          exec:
            command:
            - /ready.sh
        resources:
          limits:
            cpu: "4"
            memory: 2Gi
          requests:
            cpu: "4"
            memory: 2Gi
        securityContext:
          allowPrivilegeEscalation: false
          runAsGroup: 999
          runAsUser: 999
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /data
          name: disk
        - mountPath: /conf
          name: pgsql-conf
      - env:
        - name: DATA_SOURCE_NAME
          value: postgres://sg:@localhost:5432/?sslmode=disable
        image: wrouesnel/postgres_exporter:v0.7.0@sha256:785c919627c06f540d515aac88b7966f352403f73e931e70dc2cbf783146a98b
        name: pgsql-exporter
        resources:
          limits:
            cpu: 10m
            memory: 50Mi
          requests:
            cpu: 10m
            memory: 50Mi
        terminationMessagePolicy: FallbackToLogsOnError
      securityContext:
        fsGroup: 999
        runAsUser: 999
      volumes:
      - name: disk
        persistentVolumeClaim:
          claimName: codeintel-db
      - configMap:
          defaultMode: 511
          name: codeintel-db-conf
        name: pgsql-conf
