generated-manifests/apps_v1_deployment_github-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    description: Rate-limiting proxy for the GitHub API.
  labels:
    app.kubernetes.io/component: github-proxy
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
  name: github-proxy
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: github-proxy
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: github-proxy
        deploy: sourcegraph
    spec:
      containers:
      - image: index.docker.io/sourcegraph/github-proxy:insiders@sha256:d06282f3cf2c807d5204e9a3cec3eef9556e8ad79b2d296af63f738c3a1ecbfe
        name: github-proxy
        ports:
        - containerPort: 3180
          name: http
        resources:
          limits:
            cpu: "1"
            memory: 1G
          requests:
            cpu: 100m
            memory: 250M
        securityContext:
          allowPrivilegeEscalation: false
          runAsGroup: 101
          runAsUser: 100
        terminationMessagePolicy: FallbackToLogsOnError
      - args:
        - --reporter.grpc.host-port=jaeger-collector:14250
        - --reporter.type=grpc
        image: index.docker.io/sourcegraph/jaeger-agent:insiders@sha256:6035630b5b6c942f56693d8412d2e45cbda2261a767c3af8408f3116329dfa66
        name: jaeger-agent
        ports:
        - containerPort: 5775
          protocol: UDP
        - containerPort: 5778
          protocol: TCP
        - containerPort: 6831
          protocol: UDP
        - containerPort: 6832
          protocol: UDP
        resources:
          limits:
            cpu: "1"
            memory: 500M
          requests:
            cpu: 100m
            memory: 100M
        securityContext:
          allowPrivilegeEscalation: false
          runAsGroup: 101
          runAsUser: 100
      securityContext:
        runAsUser: 0
