generated-manifests/apps_v1_deployment_minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    description: MinIO for storing LSIF uploads.
  labels:
    app.kubernetes.io/component: minio
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
  name: minio
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
        deploy: sourcegraph
    spec:
      containers:
      - args:
        - minio
        - server
        - /data
        image: index.docker.io/sourcegraph/minio:insiders@sha256:3d7a0147396ea799284ba707765d477797518425682c9aa65faa5883a63fac4f
        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: minio
            scheme: HTTP
          initialDelaySeconds: 60
          timeoutSeconds: 5
        name: minio
        ports:
        - containerPort: 9000
          name: minio
        readinessProbe:
          httpGet:
            path: /minio/health/live
            port: minio
            scheme: HTTP
          periodSeconds: 5
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "1"
            memory: 500M
          requests:
            cpu: "1"
            memory: 500M
        securityContext:
          allowPrivilegeEscalation: false
          runAsGroup: 101
          runAsUser: 100
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /data
          name: minio-data
      securityContext:
        fsGroup: 101
        runAsUser: 0
      volumes:
      - name: minio-data
        persistentVolumeClaim:
          claimName: minio
