generated-manifests/apps_v1_deployment_precise-code-intel-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    description: Handles conversion of uploaded precise code intelligence bundles.
  labels:
    app.kubernetes.io/component: precise-code-intel
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
  name: precise-code-intel-worker
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: precise-code-intel-worker
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: precise-code-intel-worker
        deploy: sourcegraph
    spec:
      containers:
      - env:
        - name: NUM_WORKERS
          value: "4"
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        image: index.docker.io/sourcegraph/precise-code-intel-worker:insiders@sha256:e8cb8c8a8064bec8115714e769b3abda5f6bc844c1d81125b4a90c29b7c9f643
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
            scheme: HTTP
          initialDelaySeconds: 60
          timeoutSeconds: 5
        name: precise-code-intel-worker
        ports:
        - containerPort: 3188
          name: http
        - containerPort: 6060
          name: debug
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
            scheme: HTTP
          periodSeconds: 5
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "2"
            memory: 4G
          requests:
            cpu: 500m
            memory: 2G
        securityContext:
          allowPrivilegeEscalation: false
          runAsGroup: 101
          runAsUser: 100
        terminationMessagePolicy: FallbackToLogsOnError
      securityContext:
        runAsUser: 0
