generated-manifests/apps_v1_deployment_query-runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    description: Saved search query runner / notification service.
  labels:
    app.kubernetes.io/component: query-runner
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
  name: query-runner
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: query-runner
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: query-runner
        deploy: sourcegraph
    spec:
      containers:
      - image: index.docker.io/sourcegraph/query-runner:insiders@sha256:e25b39af36ef14412d055a0eacb190d8ba931a6a854745c7a29b29fc32c2cbdf
        name: query-runner
        ports:
        - containerPort: 3183
          name: http
        resources:
          limits:
            cpu: "1"
            memory: 1G
          requests:
            cpu: 500m
            memory: 1G
        securityContext:
          allowPrivilegeEscalation: false
          runAsGroup: 101
          runAsUser: 100
        terminationMessagePolicy: FallbackToLogsOnError
      - args:
        - --reporter.grpc.host-port=jaeger-collector:14250
        - --reporter.type=grpc
        image: index.docker.io/sourcegraph/jaeger-agent:insiders@sha256:6035630b5b6c942f56693d8412d2e45cbda2261a767c3af8408f3116329dfa66
        name: jaeger-agent
        ports:
        - containerPort: 5775
          protocol: UDP
        - containerPort: 5778
          protocol: TCP
        - containerPort: 6831
          protocol: UDP
        - containerPort: 6832
          protocol: UDP
        resources:
          limits:
            cpu: "1"
            memory: 500M
          requests:
            cpu: 100m
            memory: 100M
        securityContext:
          allowPrivilegeEscalation: false
          runAsGroup: 101
          runAsUser: 100
      securityContext:
        runAsUser: 0
