generated-manifests/apps_v1_deployment_syntect-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    description: Backend for syntax highlighting operations.
  labels:
    app.kubernetes.io/component: syntect-server
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
  name: syntect-server
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: syntect-server
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: syntect-server
        deploy: sourcegraph
    spec:
      containers:
      - image: index.docker.io/sourcegraph/syntax-highlighter:insiders@sha256:83ff65809e6647b466bd400de4c438a32feeabe8e791b12e15c67c84529ad2de
        livenessProbe:
          httpGet:
            path: /health
            port: http
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 5
        name: syntect-server
        ports:
        - containerPort: 9238
          name: http
        readinessProbe:
          tcpSocket:
            port: http
        resources:
          limits:
            cpu: "4"
            memory: 6G
          requests:
            cpu: 250m
            memory: 2G
        securityContext:
          allowPrivilegeEscalation: false
          runAsGroup: 101
          runAsUser: 100
        terminationMessagePolicy: FallbackToLogsOnError
      securityContext:
        runAsUser: 0
