generated-manifests/v1_service_backend.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: Dummy service that prevents backend pods from being scheduled on the same node if possible.
  labels:
    deploy: sourcegraph
    group: backend
    sourcegraph-resource-requires: no-cluster-admin
  name: backend
spec:
  clusterIP: None
  ports:
  - name: unused
    port: 10811
    targetPort: 10811
  selector:
    group: backend
  type: ClusterIP
