generated-manifests/v1_service_gitserver.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: Headless service that provides a stable network identity for the gitserver stateful set.
    prometheus.io/port: "6060"
    sourcegraph.prometheus/scrape: "true"
  labels:
    app: gitserver
    app.kubernetes.io/component: gitserver
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
    type: gitserver
  name: gitserver
spec:
  clusterIP: None
  ports:
  - name: unused
    port: 10811
    targetPort: 10811
  selector:
    app: gitserver
    type: gitserver
  type: ClusterIP
