generated-manifests/v1_service_indexed-search.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: Headless service that provides a stable network identity for the indexed-search stateful set.
    prometheus.io/port: "6070"
    sourcegraph.prometheus/scrape: "true"
  labels:
    app: indexed-search
    app.kubernetes.io/component: indexed-search
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
  name: indexed-search
spec:
  clusterIP: None
  ports:
  - port: 6070
  selector:
    app: indexed-search
  type: ClusterIP
