generated-manifests/v1_service_jaeger-query.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jaeger
    app.kubernetes.io/component: jaeger
    app.kubernetes.io/name: jaeger
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
  name: jaeger-query
spec:
  ports:
  - name: query-http
    port: 16686
    protocol: TCP
    targetPort: 16686
  selector:
    app.kubernetes.io/component: all-in-one
    app.kubernetes.io/name: jaeger
  type: ClusterIP
